chore: Make sure things look better on small screens
https://github.com/ClinGen/hla-curation-interface/issues/49

--- a/src/static/hci/css/custom.css
+++ b/src/static/hci/css/custom.css
@@ -6,3 +6,10 @@
 .footer-logo-container {
   padding: 20px;
 }
+
+.scroll-container {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  width: 100%;
+}
